deployment/website/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: default
spec:
  selector:
    app: website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
