deployment/website/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - anil-sezer.com
        - www.anil-sezer.com
      secretName: portfolio-ingress-tls
  rules:
    - host: anil-sezer.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.anil-sezer.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    # Add a new rule for HTTPS traffic on port 443
    - host: anil-sezer.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 443
            path: /
            pathType: Prefix
    - host: www.anil-sezer.com
      http:
        paths:
          - backend:
              service:
                name: website-service
                port:
                  number: 443
            path: /
            pathType: Prefix
